--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 .apexcharts-datalabel,
 .apexcharts-data-labels text {
@@ -10,12 +11,6 @@ h1 {
 }
 h2 {
   font-size: 25px;
-}
-
-body {
-  color: #f4f4f5;
-  background-color: oklch(14.1% 0.005 285.823);
-  font-family: "roboto mono";
 }
 
 svg {
@@ -31,6 +26,19 @@ svg {
   font-family: "roboto mono";
   border-radius: 6px;
 }
+
+body {
+	background-color: #f4f4f5;
+  color: #09090b;
+  font-family: "roboto mono";
+	transition: background-color 0.3s
+}
+
+body.dark {
+	color: #f4f4f5;
+  background-color: #09090b;
+}
+
 
 @layer utilities {
   .brightness-20 {
