--- a/src/app.css
+++ b/src/app.css
@@ -43,6 +43,24 @@ body.dark {
   background-color: #18181b;
 }
 
+.shadow-solid {
+ transition: box-shadow 0.3s ease-in-out;
+  box-shadow: 4px 6px 0 0 rgba(244,244,245,1);
+}
+
+.shadow-solid-transition {
+  @apply shadow-none transition-shadow ease-in-out duration-300; /* remove Tailwind default shadows */
+  box-shadow: 4px 6px 0 0 rgba(244,244,245,1);
+}
+
+.shadow-soft {
+  @apply shadow-lg shadow-zinc-500/50 ;
+}
+
+.shadow-soft-transition {
+  @apply shadow-lg hover:shadow-zinc-500/50 transition-shadow ease-in-out duration-300;
+}
+
 @layer utilities {
   .brightness-20 {
     filter: brightness(0.2);
