--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,7 @@
 h1 {
   font-size: 30px;
 }
+
 h2 {
   font-size: 25px;
 }
@@ -19,7 +20,16 @@ button {
 
 svg {
   display: inline;
-  color: #f4f4f5;
+}
+
+@layer base {
+  :focus {
+    @apply outline-none;
+  }
+
+  :focus-visible {
+    @apply outline-none ring-2 ring-green-600 ring-offset-2 ring-offset-transparent z-50;
+  }
 }
 
 .chart-tooltip {
@@ -41,24 +51,6 @@ body {
 body.dark {
   color: #f4f4f5;
   background-color: #18181b;
-}
-
-.shadow-solid {
- transition: box-shadow 0.3s ease-in-out;
-  box-shadow: 4px 6px 0 0 rgba(244,244,245,1);
-}
-
-.shadow-solid-transition {
-  @apply shadow-none transition-shadow ease-in-out duration-300; /* remove Tailwind default shadows */
-  box-shadow: 4px 6px 0 0 rgba(244,244,245,1);
-}
-
-.shadow-soft {
-  @apply shadow-lg shadow-zinc-500/50 ;
-}
-
-.shadow-soft-transition {
-  @apply shadow-lg hover:shadow-zinc-500/50 transition-shadow ease-in-out duration-300;
 }
 
 @layer utilities {
