--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,13 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
+
+@font-face {
+  font-family: "Roboto Mono";
+  src: url("/roboto-mono-v31-latin-regular.woff2") format("woff2");
+  font-display: swap;
+}
+
 .apexcharts-datalabel,
 .apexcharts-data-labels text {
   display: none !important;
@@ -53,17 +60,3 @@ body.dark {
   background-color: #18181b;
 }
 
-@layer utilities {
-  .brightness-20 {
-    filter: brightness(0.2);
-  }
-  .brightness-40 {
-    filter: brightness(0.4);
-  }
-  .brightness-60 {
-    filter: brightness(0.6);
-  }
-  .brightness-80 {
-    filter: brightness(0.8);
-  }
-}
