--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@
   src: url("/roboto-mono-v31-latin-regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 .apexcharts-datalabel,
